fixed our clients on mobile view

--- a/styles/sections/_carousel-clients.scss
+++ b/styles/sections/_carousel-clients.scss
@@ -1,7 +1,7 @@
-.carousel-clients {
+.our-clients {
     section, .section {
         padding-top: 10px !important;
-        padding-bottom: 10px!important;
+        padding-bottom: 20px!important;
     }
     .container {
         @include tablet {
@@ -14,18 +14,14 @@
             margin: 0;
             width: 200px;
 
+            img {
+                object-fit: contain;
+            }
             @include mobile {
                 width: 120px;
             }
         }
-
-        .swiper-wrapper {
-            @include from(768px) {
-                justify-content: center;
-            }
-        }
-
-        .swiper-wrapper .swiper-slide {
+        .swiper-slide {
             display: flex;
             justify-content: center;
         }
